redmine#2555 replace Help online Google search
This is the core/ part of the patch.

Add xapian-omega search to online Help.

The patch replaces Google custom search with xapian-omega search.

A new build key is introduced.

--with-omindex=local : Builds the xapian omega index for each language,
localize the result page and add xapian form in Help pages.
This option should be used if the target server cannot build
the xapian databases. The data volume of the Help online
will increase five fold approximately. Use with care.

--with-omindex=server : Localizes and adds the xapian result page,
adds the xapian form to each Help page but does not build the xapian
databases, which is left to be done in the server directly.

--with-omindex=noxap : do not build the databases, do not localize
the result template and do not add a form in the Help page.

--with-omindex will force Online Help build.

Default is noxap

NOTES:
- xapian-omega is built by $productversion and by $language
- searches returns resuls only on localized Help pages, avoiding same
resulis in many languages.
-xapian-omega databases location are hard-coded in server. For
Debian familiy it is in /etc/omega.conf and as example:
a) set database_dir /var/www/html/$(productversion)
b) set template_dir /var/www/html/$(productversion)

TODO:
- Tweak the xapian-omega result page CSS and markup.
- create a xapian-omega helper script to be run in server
- Set the omindex parameters for target server.
- add xapian-omega as build-dep, if local= is used

Change-Id: I5e3fe4191a3b054e3b6403f7cb5640953d92ba42

--- a/configure.ac
+++ b/configure.ac
@@ -1979,6 +1979,18 @@ AC_ARG_WITH(help,
     ],
 ,)
 
+AC_ARG_WITH(omindex,
+   AS_HELP_STRING([--with-omindex],
+	[Enable the build of xapian-omega index for online help.])
+   [
+                         Usage: --with-omindex=local prepare the online help pages for
+			        omindex and and build the xapian-omega locally
+				--with-omindex=server prepare the pages for omindex
+				but let xapian-omega be built in server.
+				--with-omindex=noxap do not prepare online pages for xapian-omega
+  ],
+,)
+
 libo_FUZZ_ARG_WITH(java,
     AS_HELP_STRING([--with-java=<java command>],
         [Specify the name of the Java interpreter command. Typically "java"
@@ -5028,6 +5040,47 @@ else
 fi
 AC_SUBST([ENABLE_HTMLHELP])
 AC_SUBST([HELP_ONLINE])
+
+AC_MSG_CHECKING([whether to build xapian-omega index for help])
+if test -n "$with_omindex" -a "$with_omindex" != "no" -a $_os != iOS -a $_os != Android; then
+    BUILD_TYPE="$BUILD_TYPE HELP"
+    GIT_NEEDED_SUBMODULES="helpcontent2 $GIT_NEEDED_SUBMODULES"
+    case "$with_omindex" in
+    "local")
+        ENABLE_HTMLHELP=TRUE
+        HELP_ONLINE=TRUE
+        HELP_OMINDEX_BUILD=TRUE
+        HELP_OMINDEX_PAGE=TRUE
+        AC_MSG_RESULT([LOCAL])
+        ;;
+    "server")
+        ENABLE_HTMLHELP=TRUE
+        HELP_ONLINE=TRUE
+        HELP_OMINDEX_BUILD=FALSE
+        HELP_OMINDEX_PAGE=TRUE
+        AC_MSG_RESULT([SERVER])
+        ;;
+    "noxap")
+        ENABLE_HTMLHELP=TRUE
+        HELP_ONLINE=TRUE
+        HELP_OMINDEX_BUILD=FALSE
+        HELP_OMINDEX_PAGE=FALSE
+        AC_MSG_RESULT([NOXAP])
+        ;;
+    *)
+        AC_MSG_ERROR([Unknown --with-omindex=$with_omindex])
+        ;;
+    esac
+else
+    HELP_OMINDEX_BUILD=FALSE
+    HELP_OMINDEX_PAGE=FALSE
+    AC_MSG_RESULT([no])
+fi
+AC_SUBST([ENABLE_HTMLHELP])
+AC_SUBST([HELP_OMINDEX_BUILD])
+AC_SUBST([HELP_OMINDEX_PAGE])
+AC_SUBST([HELP_ONLINE])
+
 
 dnl Test whether to include MySpell dictionaries
 dnl ===================================================================
