--- a/config_host.mk.in
+++ b/config_host.mk.in
@@ -259,6 +259,8 @@ export HAVE_LD_BSYMBOLIC_FUNCTIONS=@HAVE_LD_BSYMBOLIC_FUNCTIONS@
 export HAVE_LD_HASH_STYLE=@HAVE_LD_HASH_STYLE@
 export HAVE_POSIX_FALLOCATE=@HAVE_POSIX_FALLOCATE@
 export HELP_ONLINE=@HELP_ONLINE@
+export HELP_OMINDEX_BUILD=@HELP_OMINDEX_BUILD@
+export HELP_OMINDEX_PAGE=@HELP_OMINDEX_PAGE@
 export HOST_PLATFORM=@host@
 export HSQLDB_JAR=@HSQLDB_JAR@
 export HSQLDB_USE_JDBC_4_1=@HSQLDB_USE_JDBC_4_1@
