--- a/project.config
+++ b/project.config
@@ -8,9 +8,9 @@
 [access]
 	inheritFrom = Dev-ACL-Template
 [access "refs/*"]
+	read = group Gitorious Mirror
 	read = group ReplicateFDO
 	read = group ReplicateGithub
-	read = group ReplicateGitorious
 	read = group ReplicateLaunchpad
 [access "refs/heads/aoo/*"]
 	pushMerge = group SvnGit
