--- a/project.config
+++ b/project.config
@@ -9,9 +9,9 @@
 	inheritFrom = Dev-ACL-Template
 [access "refs/*"]
 	read = group Gitorious Mirror
+	read = group Launchpad Mirror
 	read = group ReplicateFDO
 	read = group ReplicateGithub
-	read = group ReplicateLaunchpad
 [access "refs/heads/aoo/*"]
 	pushMerge = group SvnGit
 	read = group SvnGit
