Rename group ReplicateGithub to GitHub Mirror

--- a/project.config
+++ b/project.config
@@ -8,10 +8,10 @@
 [access]
 	inheritFrom = Dev-ACL-Template
 [access "refs/*"]
+	read = group GitHub Mirror
 	read = group Gitorious Mirror
 	read = group Launchpad Mirror
 	read = group ReplicateFDO
-	read = group ReplicateGithub
 [access "refs/heads/aoo/*"]
 	pushMerge = group SvnGit
 	read = group SvnGit
