Get make_installer calls to run in parallel
If available, use GNU parallel to run N make_installer.pl scripts in
parallel, to scale packaging LibreOffice up with the rest of gbuild.

* fallback if no GNU parallel found - run make_installer sequentially
  as before
* push most of the make_installer.pl input param tweaks from gbuild
  down into a shared call_installer.sh script
* call gnu parallel with generated number of
  "templ:lang:prodname:ext:pkgfmt:strip-flag" tuples, one for each
  package to build (empty templ for non-windows, to save on cmd line
  length)
* such that we can run all those in parallel (taking into account
  the build's PARALLELISM parameter)
* there's still the main package build running epm sequentially for
  umpteen sub-packages from within _one_ make_installer.pl instance, but
  that's much harder to parallelize from inside Perl (so we punt on
  that here)

Change-Id: Ie7d3084ed60d003d587c5e64dc9fb1809b23e409

--- a/configure.ac
+++ b/configure.ac
@@ -2939,6 +2939,10 @@ if test -z "$COMPRESSIONTOOL"; then
 fi
 AC_SUBST(COMPRESSIONTOOL)
 
+# use GNU parallel for packaging, if available
+AC_PATH_PROG(GNUPARALLEL, parallel)
+AC_SUBST(GNUPARALLEL)
+
 AC_MSG_CHECKING([for GNU or BSD tar])
 for a in $GNUTAR gtar gnutar tar bsdtar /usr/sfw/bin/gtar; do
     $a --version 2> /dev/null | egrep "GNU|bsdtar"  2>&1 > /dev/null
