update macOS sdk and ios sdk version
update macOS sdk support to 12.4
update current iOS sdk version to 15.5

Change-Id: I47bd698e27fa44a9ef341284ff63fb42e76796c7

--- a/configure.ac
+++ b/configure.ac
@@ -3396,7 +3396,7 @@ if test $_os = Darwin; then
     # The SDK in the currently selected Xcode should be found.
 
     AC_MSG_CHECKING([what macOS SDK to use])
-    for macosx_sdk in 12.3 12.1 12.0 11.3 11.1 11.0 10.15 10.14 10.13; do
+    for macosx_sdk in 12.4 12.3 12.1 12.0 11.3 11.1 11.0 10.15 10.14 10.13; do
         MACOSX_SDK_PATH=`xcrun --sdk macosx${macosx_sdk} --show-sdk-path 2> /dev/null`
         if test -d "$MACOSX_SDK_PATH"; then
             break
@@ -3440,6 +3440,9 @@ if test $_os = Darwin; then
         ;;
     12.3)
         MACOSX_SDK_VERSION=120300
+        ;;
+    12.4)
+        MACOSX_SDK_VERSION=120400
         ;;
     *)
         AC_MSG_ERROR([macOS SDK $macosx_sdk is not supported])
@@ -3506,8 +3509,11 @@ if test $_os = Darwin; then
     12.3)
         MAC_OS_X_VERSION_MIN_REQUIRED="120300"
         ;;
+    12.4)
+        MAC_OS_X_VERSION_MIN_REQUIRED="120400"
+        ;;
     *)
-        AC_MSG_ERROR([with-macosx-version-min-required $with_macosx_version_min_required is not a supported value, supported values are 10.13--12.3])
+        AC_MSG_ERROR([with-macosx-version-min-required $with_macosx_version_min_required is not a supported value, supported values are 10.13--12.4])
         ;;
     esac
 
@@ -3641,8 +3647,8 @@ dnl ===================================================================
 
 if test $_os = iOS; then
     AC_MSG_CHECKING([what iOS SDK to use])
-    current_sdk_ver=15.4
-    older_sdk_vers="15.2 15.0 14.5"
+    current_sdk_ver=15.5
+    older_sdk_vers="15.4 15.2 15.0 14.5"
     if test "$enable_ios_simulator" = "yes"; then
         platform=iPhoneSimulator
         versionmin=-mios-simulator-version-min=13.6
