tdf#140215 Improve the Comment strings in .desktop files
Change-Id: I94bde89ee8cb122ed04f510e25e558240e3029b5

--- a/sysui/desktop/menus/startcenter.desktop
+++ b/sysui/desktop/menus/startcenter.desktop
@@ -26,7 +26,7 @@ Exec=${UNIXBASISROOTNAME} %%FILE%%
 MimeType=application/vnd.openofficeorg.extension;x-scheme-handler/vnd.libreoffice.cmis;x-scheme-handler/vnd.sun.star.webdav;x-scheme-handler/vnd.sun.star.webdavs;x-scheme-handler/vnd.libreoffice.command;x-scheme-handler/ms-word;x-scheme-handler/ms-powerpoint;x-scheme-handler/ms-excel;x-scheme-handler/ms-visio;x-scheme-handler/ms-access;
 Name=%PRODUCTNAME
 GenericName=Office
-Comment=The office productivity suite compatible to the open and standardized ODF document format. Supported by The Document Foundation.
+Comment=Start center for Writer, Calc, Impress, Draw, Math and Base
 StartupNotify=true
 X-GIO-NoFuse=true
 StartupWMClass=libreoffice-startcenter
