fix system libtiff detection
Change-Id: I9cd29a48a0b46bae9d265b502b250709ec8a3247

--- a/configure.ac
+++ b/configure.ac
@@ -13559,7 +13559,7 @@ dnl ===================================================================
 dnl Test whether to build libtiff or rely on the system version
 dnl ===================================================================
 
-libo_CHECK_SYSTEM_MODULE([libtiff],[LIBTIFF],[libtiff])
+libo_CHECK_SYSTEM_MODULE([libtiff],[LIBTIFF],[libtiff-4])
 
 dnl ===================================================================
 dnl Test whether to build libwebp or rely on the system version
