qt6 configure: Consider 'qmake6' when searching Qt 6 qmake
Debian testing/unstable provides a `/usr/bin/qmake6`.

Change-Id: I3dba55fc1a2d5667d9fc16aecacf8db6119ced02

--- a/configure.ac
+++ b/configure.ac
@@ -13027,7 +13027,7 @@ then
     if test -n "$QT6DIR"; then
         AC_PATH_PROG(QMAKE6, [qmake], no, [$QT6DIR/bin])
     else
-        AC_PATH_PROGS(QMAKE6, [qmake-qt6 qmake], no)
+        AC_PATH_PROGS(QMAKE6, [qmake-qt6 qmake6 qmake], no)
     fi
     if test "$QMAKE6" = "no"; then
         AC_MSG_ERROR([Qmake not found.  Please specify the root of your Qt6 installation by exporting QT6DIR before running "configure".])
