openldap: upgrade to release 2.6.4
Because NSS support has been removed in release 2.5,
switch TLS/SSL module used by OpenLDAP to OpenSSL.

Add -pthread flag to openldap_LDFLAGS when building on Linux.
This avoids errors that occur in libcrypto.a (libcrypto-lib-threads_pthread.o).

Change-Id: I4779ce40233d144d930f20e85db7b4ba08f91ea1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143646
Tested-by: Taichi Haradaguchi <20001722@ymail.ne.jp>
Reviewed-by: Taichi Haradaguchi <20001722@ymail.ne.jp>

--- a/configure.ac
+++ b/configure.ac
@@ -10653,14 +10653,14 @@ dnl ===================================================================
 
 if test "$test_openldap" = yes; then
     AC_MSG_CHECKING([whether to enable LDAP support])
-    if test "$enable_ldap" = yes -a \( "$ENABLE_NSS" = TRUE -o "$with_system_openldap" = yes \); then
+    if test "$enable_ldap" = yes -a \( "$enable_openssl" = yes -o "$with_system_openldap" = yes \); then
         AC_MSG_RESULT([yes])
         ENABLE_LDAP=TRUE
     else
         if test "$enable_ldap" != "yes"; then
             AC_MSG_RESULT([no])
         else
-            AC_MSG_RESULT([no (needs NSS or system openldap)])
+            AC_MSG_RESULT([no (needs OPENSSL or system openldap)])
         fi
     fi
 
