Add .cache (Qt Creator) and gdbtrace.log (gdb)
Change-Id: I80ebe9270bcb895ea95d2fd679417dd4f2b22165
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151047
Tested-by: Jenkins
Reviewed-by: Hossein <hossein@libreoffice.org>

--- a/.gitignore
+++ b/.gitignore
@@ -151,6 +151,7 @@ LibreOffice.VC.VC.opendb
 *.pro.user
 *.pro.user.*
 .qtc_clangd
+.cache
 
 # doxygen output
 /docs
@@ -158,9 +159,10 @@ LibreOffice.VC.VC.opendb
 # make dump-deps output
 /lo.png
 
-# gdb config
+# gdb specific
 /.gdbinit
 /.gdb_history
+gdbtrace.log
 
 # Codelite IDE specific
 *.project
