Add configure switch to enable building the installer with WiX.
Change-Id: I5b1cf7a4a90c65b27fd3a9e2f33c9ffe044704e4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151738
Tested-by: Jenkins
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>

--- a/configure.ac
+++ b/configure.ac
@@ -1893,6 +1893,11 @@ AC_ARG_ENABLE(silent-msi,
         [Enable MSI with LIMITUI=1 (silent install).]),
 ,)
 
+AC_ARG_ENABLE(wix,
+    AS_HELP_STRING([--enable-wix],
+        [Build Windows installer using WiX.]),
+,)
+
 AC_ARG_ENABLE(macosx-code-signing,
     AS_HELP_STRING([--enable-macosx-code-signing=<identity>],
         [Sign executables, dylibs, frameworks and the app bundle. If you
@@ -13424,6 +13429,21 @@ else
     AC_MSG_RESULT([yes])
     ENABLE_SILENT_MSI=TRUE
     SCPDEFS="$SCPDEFS -DENABLE_SILENT_MSI"
+fi
+AC_SUBST(ENABLE_SILENT_MSI)
+
+dnl ===================================================================
+dnl Check for WiX tools.
+dnl ===================================================================
+if test "$enable_wix" = "" -o "enable_wix" = "no"; then
+    AC_MSG_RESULT([no])
+    ENABLE_WIX=
+else
+    AC_MSG_RESULT([yes])
+    if ! which candle  >/dev/null 2>&1; then
+      AC_MSG_ERROR([WiX requested but WiX toolset not found.])
+    fi
+    ENABLE_WIX=TRUE
 fi
 AC_SUBST(ENABLE_SILENT_MSI)
 
