Set entitlements in non-release in $(INSTROOTBASE) and .dmg package
Also, when building a .dmg for macOS, skip codesigning for non-release
builds, both with and without the macOS sandbox, if there is no identity
set but set entitlements to allow Xcode's Instruments application to
connect to the application.

Lastly, add entitlements when building soffice in $(INSTROOTBASE) if
this is a non-release build.

Change-Id: I764bf5bd5d44e878669c4287906e6efd6aac593f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152655
Tested-by: Jenkins
Reviewed-by: Patrick Luby <plubius@neooffice.org>
(cherry picked from commit 55dfc98293a28af6bf81e63c2293977956c7250a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152662

--- a/config_host.mk.in
+++ b/config_host.mk.in
@@ -760,6 +760,7 @@ export ZLIB_CFLAGS=$(gb_SPACE)@ZLIB_CFLAGS@
 export ZLIB_LIBS=$(gb_SPACE)@ZLIB_LIBS@
 export ZMF_CFLAGS=$(gb_SPACE)@ZMF_CFLAGS@
 export ZMF_LIBS=$(gb_SPACE)@ZMF_LIBS@
+export GET_TASK_ALLOW_ENTITLEMENT=@GET_TASK_ALLOW_ENTITLEMENT@
 
 # lang-related stuff
 include $(BUILDDIR)/config_$(gb_Side)_lang.mk
