replace license in package header to MPL-2.0 in case of MPL subset
Change-Id: I0ba75ff7da69a3a45afde3252de272aa18f69932

--- a/configure.ac
+++ b/configure.ac
@@ -14496,6 +14496,7 @@ dnl ===================================================================
 
 AC_MSG_CHECKING([MPL subset])
 MPL_SUBSET=
+LICENSE="LGPL"
 
 if test "$enable_mpl_subset" = "yes"; then
     warn_report=false
@@ -14537,12 +14538,14 @@ if test "$enable_mpl_subset" = "yes"; then
     fi
 
     MPL_SUBSET="TRUE"
+    LICENSE="MPL-2.0"
     AC_DEFINE(MPL_HAVE_SUBSET)
     AC_MSG_RESULT([only])
 else
     AC_MSG_RESULT([no restrictions])
 fi
 AC_SUBST(MPL_SUBSET)
+AC_SUBST(LICENSE)
 
 dnl ===================================================================
 
