--- a/include/IwyuFilter_include.yaml
+++ b/include/IwyuFilter_include.yaml
@@ -285,6 +285,7 @@ excludelist:
     # base class has to be a complete type
     - com/sun/star/lang/XInitialization.hpp
     - com/sun/star/lang/XServiceInfo.hpp
+    - com/sun/star/xml/sax/XFastParser.hpp
     include/svl/numuno.hxx:
     # base class has to be a complete type
     - com/sun/star/lang/XUnoTunnel.hpp
@@ -432,6 +433,7 @@ excludelist:
     - com/sun/star/lang/XUnoTunnel.hpp
     - com/sun/star/xml/sax/XExtendedDocumentHandler.hpp
     - com/sun/star/xml/sax/XFastDocumentHandler.hpp
+    - com/sun/star/xml/sax/XFastParser.hpp
     include/svtools/asynclink.hxx:
     # unique_ptr needs complete type
     - osl/mutex.hxx
