--- a/config_host.mk.in
+++ b/config_host.mk.in
@@ -134,6 +134,7 @@ export DOCDIR=@DOCDIR@
 export DOXYGEN=@DOXYGEN@
 export DO_FETCH_TARBALLS=@DO_FETCH_TARBALLS@
 export DRAGONBOX_CFLAGS=@DRAGONBOX_CFLAGS@
+export FROZEN_CFLAGS=@FROZEN_CFLAGS@
 export DPKG=@DPKG@
 export EBOOK_CFLAGS=$(gb_SPACE)@EBOOK_CFLAGS@
 export EBOOK_LIBS=$(gb_SPACE)@EBOOK_LIBS@
@@ -158,6 +159,7 @@ export ENABLE_DBUS=@ENABLE_DBUS@
 export ENABLE_DCONF=@ENABLE_DCONF@
 export ENABLE_DEBUG=@ENABLE_DEBUG@
 SYSTEM_DRAGONBOX=@SYSTEM_DRAGONBOX@
+SYSTEM_FROZEN=@SYSTEM_FROZEN@
 export ENABLE_EPOXY=@ENABLE_EPOXY@
 export ENABLE_EOT=@ENABLE_EOT@
 export ENABLE_EVOAB2=@ENABLE_EVOAB2@
